# sum-the-yt

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  sum_local.py  sum_yt.py
videos/2026-06-18/every-frontend-system-design-pattern-w-senior-engineer-microfrontend-bff-cdn-etc/: subtitle.srt  summary.md
videos/2026-06-18/matt-pocock-s-agentic-engineering-workflow-just-copy-him/: subtitle.srt
videos/2026-06-18/what-is-happening-at-meta/: subtitle.srt
videos/google-s-okf-the-new-way-to-structure-your-knowledge-for-agents/: subtitle.srt  summary.md
videos/matt-pocock-s-agentic-engineering-workflow-just-copy-him/: summary.md
videos/this-claude-code-plugin-writes-94-less-code-ponytail/: subtitle.srt  summary.md
videos/what-is-happening-at-meta/: summary.md  transcript.txt
