[project]
name = "sum-the-yt"
version = "0.1.0"
description = "Summarize a YouTube video into Traditional Chinese (zh-TW) from its subtitles, with a Whisper transcription fallback."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.1.0",
    "faster-whisper>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
sum-yt = "sum_yt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["sum_yt.py"]
sources = ["."]
